// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto-approve all users 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'auto-approve')
    steps:
      - uses: hmarr/auto-approve-action@v2.1.0
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`auto-approve configure options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'my-approve') &&
      (github.event.pull_request.login == 'bot-1' ||
      github.event.pull_request.login == 'bot-2')
    steps:
      - uses: hmarr/auto-approve-action@v2.1.0
        with:
          github-token: \${{ secrets.MY_SECRET }}
"
`;

exports[`auto-approve default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'auto-approve') &&
      (github.event.pull_request.login == 'github-actions')
    steps:
      - uses: hmarr/auto-approve-action@v2.1.0
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
"
`;
